@@ -1,3 +1,9 @@
+2007-10-23  Akim Demaille  <demaille@gostai.com>
+
+	Update PackageInfo use.
+	* src/liburbi/uobject.cc: Use name_version_revision.
+	* src/liburbi/uobject/urbi/uobject.hh: Don't "extern" functions.
+
 2007-10-22  Akim Demaille  <akim.demaille@free.fr>
 
 	Use PackageInfo.
